[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhilingti-guanfu"
version = "0.1.0"
description = "智零体—观复：东方哲思 CLI 工具，以周易、道家、佛家智慧穿透表象，照见本质"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "朱兰州"}
]
keywords = ["iching", "philosophy", "eastern-wisdom", "cli", "divination", "awareness", "daoism", "buddhism"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Philosophy",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=12.0",
]

[project.scripts]
guanfu = "guanfu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["guanfu*"]

[tool.setuptools.package-data]
guanfu = ["data/*.json"]
